mixed improvements